- polished the am/pm switch and added tests - added unit spinner

--- a/all-imports.html
+++ b/all-imports.html
@@ -1,2 +1,3 @@
 <link rel="import" href="eras-time.html">
 <link rel="import" href="eras-ampm-switch.html">
+<link rel="import" href="eras-time-unit.html">
