--- a/demo/unit.html
+++ b/demo/unit.html
@@ -10,20 +10,20 @@
 
     <link rel="import" href="../../iron-demo-helpers/demo-pages-shared-styles.html">
     <link rel="import" href="../../iron-demo-helpers/demo-snippet.html">
-    <link rel="import" href="../eras-ampm-switch.html">
+    <link rel="import" href="../eras-time-unit.html">
 
     <style is="custom-style" include="demo-pages-shared-styles">
-      eras-ampm-switch {
+      eras-time-unit {
         margin: 0 auto;
       }
     </style>
   </head>
   <body>
     <div class="vertical-section-container centered">
-      <h3>Basic eras-ampm-switch demo</h3>
+      <h3>Basic eras-time-unit demo</h3>
       <demo-snippet>
         <template>
-          <eras-ampm-switch></eras-ampm-switch>
+          <eras-time-unit value='22' unit='mm' increment='5'></eras-time-unit>
         </template>
       </demo-snippet>
     </div>
