- updated `eras-time-unit` so that the animations are triggered when programatically updating the value - completed `eras-time` element and added tests for the integration of the various elements

--- a/demo/index.html
+++ b/demo/index.html
@@ -13,6 +13,9 @@
     <link rel="import" href="../eras-time.html">
 
     <style is="custom-style" include="demo-pages-shared-styles">
+      demo-snippet {
+        text-align: center;
+      }
     </style>
   </head>
   <body>
@@ -20,7 +23,7 @@
       <h3>Basic eras-time demo</h3>
       <demo-snippet>
         <template>
-          <eras-time></eras-time>
+          <eras-time value='11:30 AM'></eras-time>
         </template>
       </demo-snippet>
     </div>
