--- a/eras-ampm-switch.html
+++ b/eras-ampm-switch.html
@@ -20,6 +20,7 @@ Property|Description|Default
        :host {
         display: block;
         width: var(--ampm-switch-width, 40px);
+        margin: 0 5px;
       }
 
       #am,
