removed paper ripple effect and increased inset shadow

--- a/eras-ampm-switch.html
+++ b/eras-ampm-switch.html
@@ -25,7 +25,7 @@ Property|Description|Default
 
       #am,
       #pm {
-        box-shadow: inset 0px 0px 3px 1px rgba(0, 0, 0, 0.20);
+        box-shadow: inset 0px 0px 3px 3px rgba(0, 0, 0, 0.20);
         z-index: 100;
         transition: all 300ms linear;
       }
@@ -63,8 +63,8 @@ Property|Description|Default
     </style>
     <div id='container' class='layout vertical center'>
       <div class='flex'></div>
-      <paper-button id='am' rasied>AM</paper-button>
-      <paper-button id='pm' raised>PM</paper-button>
+      <paper-button id='am' noink>AM</paper-button>
+      <paper-button id='pm' noink>PM</paper-button>
       <div class='flex'></div>
     </div>
   </template>
