renamed demo and test files to match conventions and added `test/index.html`

--- a/eras-ampm-switch.html
+++ b/eras-ampm-switch.html
@@ -12,7 +12,7 @@ Property|Description|Default
 `--theme-colour`|Toolbar background, checkboxes, etc.|`--primary-color`
 `--ampm-switch-width`|Width of the element|`40px`
 
-@demo demo/ampm.html
+@demo demo/eras-ampm-switch_demo.html
 -->
 <dom-module id='eras-ampm-switch'>
   <template>
