--- a/eras-time-unit.html
+++ b/eras-time-unit.html
@@ -21,7 +21,7 @@ Property|Description|Default
 `--time-unit-button-height`|Height of the buttons|`20px`
 `--time-unit-font-size`|Size of text|`34px`
 
-@demo demo/unit.html
+@demo demo/eras-time-unit_demo.html
 -->
 <dom-module id='eras-time-unit'>
   <template>
