--- a/eras-time.html
+++ b/eras-time.html
@@ -1,14 +1,14 @@
 <link rel="import" href="../polymer/polymer.html">
 <link rel='import' href='../iron-flex-layout/iron-flex-layout-classes.html'>
 <link rel='import' href='../eras-external/moment.html'>
-<link rel='import' href='../eras-time/eras-time-unit.html'>
-<link rel='import' href='../eras-time/eras-ampm-switch.html'>
+<link rel='import' href='eras-time-unit.html'>
+<link rel='import' href='eras-ampm-switch.html'>
 
 <!--
 `eras-time`
 
 
-@demo demo/index.html
+@demo demo/eras-time_demo.html
 -->
 
 <dom-module id="eras-time">
