--- a/demo/eras-time_demo.html
+++ b/demo/eras-time_demo.html
@@ -1,31 +1,32 @@
 <!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, minimum-scale=1, initial-scale=1, user-scalable=yes">
+<html lang='en'>
 
-    <title>eras-time demo</title>
+<head>
+  <meta charset='utf-8'>
+  <meta name='viewport' content='width=device-width, minimum-scale=1, initial-scale=1, user-scalable=yes'>
 
-    <script src="../../webcomponentsjs/webcomponents-lite.js"></script>
+  <title>eras-time demo</title>
 
-    <link rel="import" href="../../iron-demo-helpers/demo-pages-shared-styles.html">
-    <link rel="import" href="../../iron-demo-helpers/demo-snippet.html">
-    <link rel="import" href="../eras-time.html">
+  <script src='../../webcomponentsjs/webcomponents-lite.js'></script>
 
-    <style is="custom-style" include="demo-pages-shared-styles">
-      demo-snippet {
-        text-align: center;
-      }
-    </style>
-  </head>
-  <body>
-    <div class="vertical-section-container centered">
-      <h3>Basic eras-time demo</h3>
-      <demo-snippet>
-        <template>
-          <eras-time value='11:30 AM'></eras-time>
-        </template>
-      </demo-snippet>
-    </div>
-  </body>
+  <link rel='import' href='../../iron-demo-helpers/demo-pages-shared-styles.html'>
+  <link rel='import' href='../../iron-demo-helpers/demo-snippet.html'>
+  <link rel='import' href='../eras-time.html'>
+
+  <style is='custom-style' include='demo-pages-shared-styles'>
+
+  </style>
+</head>
+
+<body>
+  <div class='vertical-section-container centered'>
+    <h3>Basic eras-time demo</h3>
+    <demo-snippet>
+      <template>
+        <eras-time value='11:30 AM'></eras-time>
+      </template>
+    </demo-snippet>
+  </div>
+</body>
+
 </html>
