--- a/eras-time.html
+++ b/eras-time.html
@@ -1,4 +1,4 @@
-<link rel="import" href="../polymer/polymer.html">
+<link rel='import' href='../polymer/polymer.html'>
 <link rel='import' href='../iron-flex-layout/iron-flex-layout-classes.html'>
 <link rel='import' href='../eras-external/moment.html'>
 <link rel='import' href='eras-time-unit.html'>
@@ -11,11 +11,11 @@
 @demo demo/eras-time_demo.html
 -->
 
-<dom-module id="eras-time">
+<dom-module id='eras-time'>
   <template>
     <style include='iron-flex iron-flex-alignment'>
        :host {
-        display: inline-block;
+        display: block;
       }
 
       #container>div {
@@ -26,10 +26,12 @@
     </style>
 
     <div id='container' class='layout horizontal center'>
+      <div class='flex'></div>
       <eras-time-unit id='hours' value='{{hours}}' unit='hh' increment='1'></eras-time-unit>
       <div>:</div>
       <eras-time-unit id='minutes' value='{{minutes}}' unit='mm' increment='{{minutesIncrement}}'></eras-time-unit>
       <eras-ampm-switch id='period' value='{{period}}'></eras-ampm-switch>
+      <div class='flex'></div>
     </div>
 
   </template>
@@ -40,7 +42,7 @@
       properties: {
         /**
          * The time currently represented by the element
-         * stored as a "hh:mm A" string (http://momentjs.com/docs/#/displaying/format/)
+         * stored as a 'hh:mm A' string (http://momentjs.com/docs/#/displaying/format/)
          * @type {String}
          */
         value: {
@@ -70,7 +72,7 @@
         },
 
         /**
-         * The "period" (am/pm) unit
+         * The 'period' (am/pm) unit
          * @type {String}
          */
         period: {
